# my-c-project

./: CMakeLists.txt  LICENSE
src/homework_1/: main  main.c  output.txt  output1.txt  test.c
src/homework_AVL-tree/: airports.txt  main  main.c
src/homework_avtomat-for-num/: main  main.c
src/homework_csv-printer/: csvprint  input1.csv  main  main.c  output.txt  test  test.c
src/homework_gosudarstva/: main  main.c  test1.txt  test2.txt
